# urdailyemail

./: .gitignore  .pre-commit-config.yaml  README.rst  lamda_handler.py  pyproject.toml
tests/: test_urdailyemail.py
urdailyemail/: email.py  table.py  table_row.py
